--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 		<!-- Header -->
 			<section id="header">
 				<header>
-					<h1>Overflow</h1>
-					<p>By HTML5 UP</p>
+					<h1><img src="images/logo.png" /></h1>
+					<p>By Dominique Morisseau</p>
 				</header>
 				<footer>
 					<a href="#banner" class="button style2 scrolly scrolly-centered">Proceed as anticipated</a>
