--- a/index.html
+++ b/index.html
@@ -127,16 +127,22 @@
 							</div>
 				<div class="inner gallery">
                     <div class="row flush">
-                        <div class="3u"><a href="images/fulls/01.jpg" class="image fit"><img src="images/thumbs/01.jpg" alt="" title="Ad infinitum" /></a></div>
-                        <div class="3u"><a href="images/fulls/02.jpg" class="image fit"><img src="images/thumbs/02.jpg" alt="" title="Dressed in Clarity" /></a></div>
-                        <div class="3u"><a href="images/fulls/03.jpg" class="image fit"><img src="images/thumbs/03.jpg" alt="" title="Raven" /></a></div>
-                        <div class="3u"><a href="images/fulls/04.jpg" class="image fit"><img src="images/thumbs/04.jpg" alt="" title="I'll have a cup of Disneyland, please" /></a></div>
+                        <div class="3u"><a href="images/fulls/Detroit670002rR.jpg" class="image fit"><img src="images/thumbs/Detroit670002rR.jpg" alt="" title="Ad infinitum" /></a></div>
+                        <div class="3u"><a href="images/fulls/Detroit670003rR.jpg" class="image fit"><img src="images/thumbs/Detroit670003rR.jpg" alt="" title="Dressed in Clarity" /></a></div>
+                        <div class="3u"><a href="images/fulls/Detroit670005rR.jpg" class="image fit"><img src="images/thumbs/Detroit670005rR.jpg" alt="" title="Raven" /></a></div>
+                        <div class="3u"><a href="images/fulls/Detroit670007rR.jpg" class="image fit"><img src="images/thumbs/Detroit670007rR.jpg" alt="" title="I'll have a cup of Disneyland, please" /></a></div>
                     </div>
                     <div class="row flush">
-                        <div class="3u"><a href="images/fulls/05.jpg" class="image fit"><img src="images/thumbs/05.jpg" alt="" title="Cherish" /></a></div>
-                        <div class="3u"><a href="images/fulls/06.jpg" class="image fit"><img src="images/thumbs/06.jpg" alt="" title="Different." /></a></div>
-                        <div class="3u"><a href="images/fulls/07.jpg" class="image fit"><img src="images/thumbs/07.jpg" alt="" title="History was made here" /></a></div>
-                        <div class="3u"><a href="images/fulls/08.jpg" class="image fit"><img src="images/thumbs/08.jpg" alt="" title="People come and go and walk away" /></a></div>
+                        <div class="3u"><a href="images/fulls/Detroit670015rR.jpg" class="image fit"><img src="images/thumbs/Detroit670015rR.jpg" alt="" title="Cherish" /></a></div>
+                        <div class="3u"><a href="images/fulls/Detroit670021rR.jpg" class="image fit"><img src="images/thumbs/Detroit670021rR.jpg" alt="" title="Different." /></a></div>
+                        <div class="3u"><a href="images/fulls/Detroit670032rR.jpg" class="image fit"><img src="images/thumbs/Detroit670032rR.jpg" alt="" title="History was made here" /></a></div>
+                        <div class="3u"><a href="images/fulls/Detroit670044rR.jpg" class="image fit"><img src="images/thumbs/Detroit670044rR.jpg" alt="" title="People come and go and walk away" /></a></div>
+                    </div>
+                    <div class="row flush">
+                        <div class="3u"><a href="images/fulls/Detroit670060rR.jpg" class="image fit"><img src="images/thumbs/Detroit670060rR.jpg" alt="" title="Cherish" /></a></div>
+                        <div class="3u"><a href="images/fulls/Detroit670084rR.jpg" class="image fit"><img src="images/thumbs/Detroit670084rR.jpg" alt="" title="Different." /></a></div>
+                        <div class="3u"><a href="images/fulls/Detroit670086rR.jpg" class="image fit"><img src="images/thumbs/Detroit670086rR.jpg" alt="" title="History was made here" /></a></div>
+                        <div class="3u"><a href="images/fulls/Detroit670109rR.jpg" class="image fit"><img src="images/thumbs/Detroit670109rR.jpg" alt="" title="People come and go and walk away" /></a></div>
                     </div>
                 </div>
 						</div>
