some colors and images and stuff

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 			<link rel="stylesheet" href="css/skel.css" />
 			<link rel="stylesheet" href="css/style.css" />
 			<link rel="stylesheet" href="css/style-wide.css" />
+			<link href='http://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
 		</noscript>
 		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
 		<!--[if lte IE 9]><link rel="stylesheet" href="css/ie/v9.css" /><![endif]-->
@@ -29,8 +30,8 @@
 		<!-- Header -->
 			<section id="header" class="dark">
 				<header>
-					<h1>Welcome to Tessellate</h1>
-					<p>A free responsive site template by <a href="http://html5up.net">HTML5 UP</a></p>
+					<h1><img src="images/logo.png" /></h1>
+					<p>by Dominique Morisseau</p>
 				</header>
 				<footer>
 					<a href="#first" class="button scrolly">Proceed to second phase</a>
@@ -41,9 +42,14 @@
 			<section id="first" class="main">
 				<header>
 					<div class="container">
-						<h2>Tessellate is a free responsive site template</h2>
-						<p>Gravida dis placerat lectus ante vel nunc euismod eget ornare varius gravida euismod lorem ipsum dolor sit amet consequat<br />
-						feugiat. Gravida dis placerat lectus ante vel nunc euismod eget ornare varius gravida euismod lorem ipsum dolor sit amet.</p>
+					    <div class="row">
+					        <div class="4u">
+						<h2><i>Detroit '67</i> by Dominique Morisseau is the recipient of the 2014 <a href="http://kennedyprize.columbia.edu" target="_blank">Edward M. Kennedy Prize for Drama Inspired by American History.</a></h2>
+						    </div>
+						    <div class="8u">
+						<p>The first in a 3-play cycle about playwright Dominique Morisseau's hometown Detroit, Detroit '67 explores an explosive and decisive moment in a great American city. Detroit '67s compelling characters struggle with racial tension and economic instability. Detroit ’67 is a work grounded in historical understanding that also comments meaningfully on the pressing issues of our day.</p>
+						</div>
+						</div>
 					</div>
 				</header>
 				<div class="content dark style1 featured">
@@ -109,40 +115,25 @@
 				<div class="content dark style2">
 					<div class="container">
 						<div class="row">
-							<div class="4u">
-								<section>
-									<h3>Augue vivamus sed ipsum commodo lorem dolor</h3>
-									<p>Gravida dis placerat lectus ante vel nunc euismod est turpis sodales. Diam
-									tempor dui lacinia eget ornare varius gravida. Gravida dis placerat lectus ante 
-									vel nunc euismod est turpis sodales. Diam tempor dui lacinia accumsan vivamus 
-									augue cubilia vivamus nisi eu eget ornare varius gravida euismod.  Gravida dis 
-									lorem ipsum dolor placerat magna tempus feugiat.</p>
-									<p>Lectus ante vel nunc euismod est turpis sodales. Diam tempor dui lacinia 
-									accumsan vivamus augue cubilia vivamus nisi eu eget ornare varius gravida dolore
-									euismod lorem ipsum dolor.</p>
-									<footer>
-										<a href="#third" class="button scrolly">Accumsan nisi tempor</a>
-									</footer>
-								</section>
-							</div>
+				<div class="12u">			
 				<div class="inner gallery">
-                    <div class="row flush">
-                        <div class="3u"><a href="images/fulls/Detroit670002rR.jpg" class="image fit"><img src="images/thumbs/Detroit670002rR.jpg" alt="" title="Ad infinitum" /></a></div>
-                        <div class="3u"><a href="images/fulls/Detroit670003rR.jpg" class="image fit"><img src="images/thumbs/Detroit670003rR.jpg" alt="" title="Dressed in Clarity" /></a></div>
-                        <div class="3u"><a href="images/fulls/Detroit670005rR.jpg" class="image fit"><img src="images/thumbs/Detroit670005rR.jpg" alt="" title="Raven" /></a></div>
-                        <div class="3u"><a href="images/fulls/Detroit670007rR.jpg" class="image fit"><img src="images/thumbs/Detroit670007rR.jpg" alt="" title="I'll have a cup of Disneyland, please" /></a></div>
+                    <div class="row">
+                        <div class="3u"><a href="images/fulls/Detroit670002rR.jpg" class="image fit"><img src="images/thumbs/Detroit670002rR.jpg" alt="" title="De’Adre Aziza and Michelle Wilson in the Public Lab production Detroit ’67, written by Dominique Morisseau and directed by Kwame Kwei-Armah, running at The Public Theater at Astor Place Tuesday, February 26 through Sunday, March 17. Photo credit: Joan Marcus." /></a></div>
+                        <div class="3u"><a href="images/fulls/Detroit670003rR.jpg" class="image fit"><img src="images/thumbs/Detroit670003rR.jpg" alt="" title="De’Adre Aziza and Michelle Wilson in the Public Lab production Detroit ’67, written by Dominique Morisseau and directed by Kwame Kwei-Armah, running at The Public Theater at Astor Place Tuesday, February 26 through Sunday, March 17. Photo credit: Joan Marcus." /></a></div>
+                        <div class="3u"><a href="images/fulls/Detroit670005rR.jpg" class="image fit"><img src="images/thumbs/Detroit670005rR.jpg" alt="" title="Brandon J. Dirden and Francois Battiste in the Public Lab production Detroit ’67, written by Dominique Morisseau and directed by Kwame Kwei-Armah, running at The Public Theater at Astor Place Tuesday, February 26 through Sunday, March 17. Photo credit: Joan Marcus." /></a></div>
+                        <div class="3u"><a href="images/fulls/Detroit670007rR.jpg" class="image fit"><img src="images/thumbs/Detroit670007rR.jpg" alt="" title="Michelle Wilson and Francois Battiste in the Public Lab production Detroit ’67, written by Dominique Morisseau and directed by Kwame Kwei-Armah, running at The Public Theater at Astor Place Tuesday, February 26 through Sunday, March 17. Photo credit: Joan Marcus." /></a></div>
                     </div>
-                    <div class="row flush">
-                        <div class="3u"><a href="images/fulls/Detroit670015rR.jpg" class="image fit"><img src="images/thumbs/Detroit670015rR.jpg" alt="" title="Cherish" /></a></div>
-                        <div class="3u"><a href="images/fulls/Detroit670021rR.jpg" class="image fit"><img src="images/thumbs/Detroit670021rR.jpg" alt="" title="Different." /></a></div>
-                        <div class="3u"><a href="images/fulls/Detroit670032rR.jpg" class="image fit"><img src="images/thumbs/Detroit670032rR.jpg" alt="" title="History was made here" /></a></div>
-                        <div class="3u"><a href="images/fulls/Detroit670044rR.jpg" class="image fit"><img src="images/thumbs/Detroit670044rR.jpg" alt="" title="People come and go and walk away" /></a></div>
+                    <div class="row">
+                        <div class="3u"><a href="images/fulls/Detroit670015rR.jpg" class="image fit"><img src="images/thumbs/Detroit670015rR.jpg" alt="" title="Michelle Wilson and Brandon J. Dirden in the Public Lab production Detroit ’67, written by Dominique Morisseau and directed by Kwame Kwei-Armah, running at The Public Theater at Astor Place Tuesday, February 26 through Sunday, March 17. Photo credit: Joan Marcus." /></a></div>
+                        <div class="3u"><a href="images/fulls/Detroit670021rR.jpg" class="image fit"><img src="images/thumbs/Detroit670021rR.jpg" alt="" title="Samantha Soule, De’Adre Aziza, and Michelle Wilson in the Public Lab production Detroit ’67, written by Dominique Morisseau and directed by Kwame Kwei-Armah, running at The Public Theater at Astor Place Tuesday, February 26 through Sunday, March 17. Photo credit: Joan Marcus." /></a></div>
+                        <div class="3u"><a href="images/fulls/Detroit670032rR.jpg" class="image fit"><img src="images/thumbs/Detroit670032rR.jpg" alt="" title="De’Adre Aziza and Michelle Wilson in the Public Lab production Detroit ’67, written by Dominique Morisseau and directed by Kwame Kwei-Armah, running at The Public Theater at Astor Place Tuesday, February 26 through Sunday, March 17. Photo credit: Joan Marcus." /></a></div>
+                        <div class="3u"><a href="images/fulls/Detroit670044rR.jpg" class="image fit"><img src="images/thumbs/Detroit670044rR.jpg" alt="" title="De’Adre Aziza, Francois Battiste, and Michelle Wilson in the Public Lab production Detroit ’67, written by Dominique Morisseau and directed by Kwame Kwei-Armah, running at The Public Theater at Astor Place Tuesday, February 26 through Sunday, March 17. Photo credit: Joan Marcus." /></a></div>
                     </div>
-                    <div class="row flush">
-                        <div class="3u"><a href="images/fulls/Detroit670060rR.jpg" class="image fit"><img src="images/thumbs/Detroit670060rR.jpg" alt="" title="Cherish" /></a></div>
-                        <div class="3u"><a href="images/fulls/Detroit670084rR.jpg" class="image fit"><img src="images/thumbs/Detroit670084rR.jpg" alt="" title="Different." /></a></div>
-                        <div class="3u"><a href="images/fulls/Detroit670086rR.jpg" class="image fit"><img src="images/thumbs/Detroit670086rR.jpg" alt="" title="History was made here" /></a></div>
-                        <div class="3u"><a href="images/fulls/Detroit670109rR.jpg" class="image fit"><img src="images/thumbs/Detroit670109rR.jpg" alt="" title="People come and go and walk away" /></a></div>
+                    <div class="row">
+                        <div class="3u"><a href="images/fulls/Detroit670060rR.jpg" class="image fit"><img src="images/thumbs/Detroit670060rR.jpg" alt="" title="De’Adre Aziza and Francois Battiste in the Public Lab production Detroit ’67, written by Dominique Morisseau and directed by Kwame Kwei-Armah, running at The Public Theater at Astor Place Tuesday, February 26 through Sunday, March 17. Photo credit: Joan Marcus." /></a></div>
+                        <div class="3u"><a href="images/fulls/Detroit670084rR.jpg" class="image fit"><img src="images/thumbs/Detroit670084rR.jpg" alt="" title="De’Adre Aziza and Michelle Wilson in the Public Lab production Detroit ’67, written by Dominique Morisseau and directed by Kwame Kwei-Armah, running at The Public Theater at Astor Place Tuesday, February 26 through Sunday, March 17. Photo credit: Joan Marcus." /></a></div>
+                        <div class="3u"><a href="images/fulls/Detroit670086rR.jpg" class="image fit"><img src="images/thumbs/Detroit670086rR.jpg" alt="" title="Francois Battiste and De’Adre Aziza in the Public Lab production Detroit ’67, written by Dominique Morisseau and directed by Kwame Kwei-Armah, running at The Public Theater at Astor Place Tuesday, February 26 through Sunday, March 17. Photo credit: Joan Marcus." /></a></div>
+                        <div class="3u"><a href="images/fulls/Detroit670109rR.jpg" class="image fit"><img src="images/thumbs/Detroit670109rR.jpg" alt="" title="Francois Battiste and Samantha Soule in the Public Lab production Detroit ’67, written by Dominique Morisseau and directed by Kwame Kwei-Armah, running at The Public Theater at Astor Place Tuesday, February 26 through Sunday, March 17. Photo credit: Joan Marcus." /></a></div>
                     </div>
                 </div>
 						</div>
@@ -390,25 +381,7 @@
 					</div>
 				</header>
 				<div class="content style4 featured">
-					<div class="container small">
-						<form method="post" action="#">
-							<div class="row half">
-								<div class="6u"><input type="text" placeholder="Name" /></div>
-								<div class="6u"><input type="text" placeholder="Email" /></div>
-							</div>
-							<div class="row half">
-								<div class="12u"><textarea name="message" placeholder="Message"></textarea></div>
-							</div>
-							<div class="row">
-								<div class="12u">
-									<ul class="actions">
-										<li><input type="submit" class="button" value="Send Message" /></li>
-										<li><input type="reset" class="button alt" value="Clear Form" /></li>
-									</ul>
-								</div>
-							</div>
-						</form>
-					</div>
+					<iframe src="https://embed.spotify.com/?uri=spotify:user:emkprize:playlist:5zSOB1nKDThsKZaeQtDXTk" width="300" height="380" frameborder="0" allowtransparency="true"></iframe>
 				</div>
 			</section>
 			
