--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 				<header>
 					<h1><img src="images/logo.png" /></h1>
 					<p>by Dominique Morisseau</p>
+					<h2><i>Detroit '67</i> by Dominique Morisseau is the recipient of the 2014 <a href="http://kennedyprize.columbia.edu" target="_blank">Edward M. Kennedy Prize for Drama Inspired by American History.</a></h2>
 				</header>
 			</section>
 			
@@ -41,10 +42,13 @@
 					<div class="container">
 					    <div class="row">
 					        <div class="4u">
-						<h2><i>Detroit '67</i> by Dominique Morisseau is the recipient of the 2014 <a href="http://kennedyprize.columbia.edu" target="_blank">Edward M. Kennedy Prize for Drama Inspired by American History.</a></h2>
+						<p>The first in a 3-play cycle about playwright Dominique Morisseau's hometown Detroit, <i>Detroit '67</i> explores an explosive and decisive moment in a great American city. <i>Detroit '67</i>s compelling characters struggle with racial tension and economic instability. <i>Detroit ’67</i> is a work grounded in historical understanding that also comments meaningfully on the pressing issues of our day.</p>
 						    </div>
 						    <div class="8u">
-						<p>The first in a 3-play cycle about playwright Dominique Morisseau's hometown Detroit, Detroit '67 explores an explosive and decisive moment in a great American city. Detroit '67s compelling characters struggle with racial tension and economic instability. Detroit ’67 is a work grounded in historical understanding that also comments meaningfully on the pressing issues of our day.</p>
+						
+						<div class="gallery">
+						<a href="http://youtu.be/H9c2zjByA44" data-poptrox="youtube,800x480"><img src="images/video_slide.jpg" title="Interview with Dominique Morisseau at the 2014 Edward M Kennedy Prize for Drama Inspired by American History prize reception, March 18, 2014." /></a>
+						</div>
 						</div>
 						</div>
 					</div>
