video stuff n pic n stuff

--- a/index.html
+++ b/index.html
@@ -41,14 +41,16 @@
 				<header>
 					<div class="container">
 					    <div class="row">
+					        <div class="2u">
+					            <img src="images/dm_biopic.jpg" class="image circle" />
+					        </div>
 					        <div class="4u">
-						<p>The first in a 3-play cycle about playwright Dominique Morisseau's hometown Detroit, <i>Detroit '67</i> explores an explosive and decisive moment in a great American city. <i>Detroit '67</i>s compelling characters struggle with racial tension and economic instability. <i>Detroit ’67</i> is a work grounded in historical understanding that also comments meaningfully on the pressing issues of our day.</p>
-						    </div>
-						    <div class="8u">
-						
-						<div class="gallery">
-						<a href="http://youtu.be/H9c2zjByA44" data-poptrox="youtube,800x480"><img src="images/video_slide.jpg" title="Interview with Dominique Morisseau at the 2014 Edward M Kennedy Prize for Drama Inspired by American History prize reception, March 18, 2014." /></a>
+						<p>The first in a 3-play cycle about playwright Dominique Morisseau's hometown Detroit, <i>Detroit '67</i> explores an explosive and decisive moment in a great American city. The play's compelling characters struggle with racial tension and economic instability. <i>Detroit ’67</i> is a work grounded in historical understanding that also comments meaningfully on the pressing issues of our day.</p>
 						</div>
+						   
+						    <div class="6u">
+						<iframe width="560" height="315" src="http://www.youtube.com/embed/H9c2zjByA44" frameborder="0" allowfullscreen></iframe>
+						 </div>
 						</div>
 						</div>
 					</div>
