--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 				<header>
 					<h1><img src="images/logo.png" /></h1>
 					<p>by Dominique Morisseau</p>
-					<h2><i>Detroit '67</i> by Dominique Morisseau is the recipient of the 2014 <a href="http://kennedyprize.columbia.edu" target="_blank">Edward M. Kennedy Prize for Drama Inspired by American History.</a></h2>
+					
 				</header>
 			</section>
 			
@@ -42,7 +42,8 @@
 					<div class="container">
 					    <div class="row">
 					        <div class="12u">
-						<h2>The first in a 3-play cycle about playwright Dominique Morisseau's hometown Detroit, <i><strong>Detroit '67</strong></i> explores an explosive and decisive moment in a great American city. The play's compelling characters struggle with racial tension and economic instability. <i><strong>Detroit ’67</strong></i> is a work grounded in historical understanding that also comments meaningfully on the pressing issues of our day.</h2>
+	                   <h2><i><strong>Detroit '67</strong></i> by Dominique Morisseau is the recipient of the 2014 Edward M. Kennedy Prize for Drama Inspired by American History.</h2>				            
+						<p>The first in a 3-play cycle about playwright Dominique Morisseau's hometown Detroit, <i><strong>Detroit '67</strong></i> explores an explosive and decisive moment in a great American city. The play's compelling characters struggle with racial tension and economic instability. <i><strong>Detroit ’67</strong></i> is a work grounded in historical understanding that also comments meaningfully on the pressing issues of our day.</p>
 						</div>						   
 			
 						</div>
