--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 					<div class="container">
 					    <div class="row">
 					        <div class="12u">
-	                   <h2><i><strong>Detroit '67</strong></i> by Dominique Morisseau is the recipient of the 2014 Edward M. Kennedy Prize for Drama Inspired by American History.</h2>				            
+	                   <h2><i><strong>Detroit '67</strong></i> by Dominique Morisseau is the recipient of the 2014 <br> Edward M. Kennedy Prize for Drama Inspired by American History.</h2>				            
 						<p>The first in a 3-play cycle about playwright Dominique Morisseau's hometown Detroit, <i><strong>Detroit '67</strong></i> explores an explosive and decisive moment in a great American city. The play's compelling characters struggle with racial tension and economic instability. <i><strong>Detroit ’67</strong></i> is a work grounded in historical understanding that also comments meaningfully on the pressing issues of our day.</p>
 						</div>						   
 			
