--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         			</section>
 
 		<!-- Second -->
-			<section id="second" class="main dark">
+			<section id="second" class="main">
 				<header>
 					<div class="container">
 						<h2>Download excerpts of <i>Detroit '67</i></h2>
