--- a/index.html
+++ b/index.html
@@ -202,47 +202,53 @@
 				<div class="content dark style3">
 					<div class="container">
 						<div class="row">
-							<div class="4u">
-								<h3>Diam vivamus turpis lorem sodales lectus ornare</h3>
-								<p>Gravida dis placerat lectus ante vel nunc euismod est turpis sodales. Diam 
-								tempor dui lacinia eget ornare varius gravida. Gravida dis placerat lectus ante 
-								vel nunc euismod est turpis sodales. Diam tempor dui lacinia accumsan vivamus 
-								augue cubilia vivamus nisi eu eget ornare varius gravida euismod.  Gravida dis 
-								lorem ipsum dolor placerat magna tempus feugiat.</p>
-								<p>Lectus ante vel nunc euismod est turpis sodales. Diam tempor dui lacinia 
-								accumsan vivamus augue cubilia vivamus nisi eu eget ornare varius gravida dolore 
-								euismod lorem ipsum dolor sit amet consequat. vivamus nisi eu eget ornare varius 
-								gravida dolore euismod lorem ipsum dolor sit amet consequat. vivamus nisi eu 
-								eget ornare et magna.</p>
+							<div class="12u">
+								<h2>Recommended Reading</h2>
+								</div>
+								<div class="4u">
+	
+								<p>Dominique Morisseau was inspired and influenced by many novels, stories, poems, songs, and art. She was also influenced by reading articles from her uncle, Eddie Morisseau, and oral histories from her mother, father, uncles, and father-in-law.  </p>
+								<p>
+								    <h4>Books about Detroit</h4>
+								    <ul>
+								        <li><a href="http://www.amazon.com/Detroit-Revolution-Updated-Edition-Classics/dp/0896085724" target="_blank"><strong><i>Detroit, I do mind dying</i></strong> by Dan Georgakas</a></li>
+								        <li><a href="http://www.amazon.com/Detroit-Violence-Revised-Edition-Series/dp/0814321046" target="_blank"><strong><i>Detroit: City of Race and Class Violence</i></strong> by B. J. Widick</a></li>
+								        <li><a href="http://www.amazon.com/Divided-Soul-Life-Marvin-Gaye/dp/030681191X" target="_blank"><strong><i>Divided Soul: The Life of Marvin Gaye</i></strong> by David Ritz</a></li>
+								    </ul>
+								    <h4>Other Recommended Reading</h4>
+								    <ul>
+                                        <li><a href="http://www.amazon.com/Native-Son-Richard-Wright/dp/0061148504" target="_blank"><strong><i>Native Son</i></strong> by Richard Wright</a></li>
+                                        <li><a href="http://www.amazon.com/The-Street-Novel-Ann-Petry/dp/0395901499" target="_blank"><strong><i>The Street</i></strong> by Ann Petry</a></li>
+                                        <li><a href="http://www.amazon.com/Makes-Me-Wanna-Holler-America/dp/0679740708" target="_blank"><strong><i>Makes Me Wanna Holler</i></strong> by Nathan McCall</a></li>
+                                        <li><a href="http://www.amazon.com/Harry-Potter-Paperback-Box-Books/dp/0545162076" target="_blank"><strong><i>The entire Harry Potter series.</i></strong> by JK Rowling</a></li>
+                                </ul>
+                            </div>
+                            <div class="4u">
+                                <ul>
+                                        <li><a href="http://www.amazon.com/Scorpions-Walter-Dean-Myers/dp/0064406237" target="_blank"><strong><i>Scorpions</i></strong> by Walter Dean Myers</a></li>
+                                        <li><a href="http://www.amazon.com/The-Bluest-Eye-Vintage-International/dp/0307278441" target="_blank"><strong><i>The Bluest Eye</i></strong> by Toni Morrison </a></li>
+                                        <li><a href="http://www.amazon.com/The-Autobiography-Malcolm-Told-Haley/dp/0345350685" target="_blank"><strong><i>The Autobiography of Malcolm X</i></strong> by Alex Haley</a></li>
+                                        <li><a href="http://www.amazon.com/GraceLand-A-Novel-Chris-Abani-ebook/dp/B0057QT72E" target="_blank"><strong><i>Graceland</i></strong> by Chris Abani</a></li>
+                                        <li><a href="http://www.amazon.com/River-Cross-Heart-Oprahs-Book/dp/B00008RWCM" target="_blank"><strong><i>River Cross My Heart</i></strong> by Breena Clarke</a></li>
+                                        <li><a href="http://www.amazon.com/Breath-Eyes-Memory-Oprahs-Book/dp/037570504X" target="_blank"><strong><i>Breath, Eyes, Memory</i></strong> by Edwidge Danticat </a></li>
+                                        <li><a href="http://www.amazon.com/Lord-Flies-William-Golding/dp/0399501487" target="_blank"><strong><i>Lord of the Flies</i></strong> by William Golding</a></li>
+                                        <li><a href="http://www.amazon.com/Roll-Thunder-Hear-My-Cry/dp/0142401129" target="_blank"><strong><i>Roll of Thunder, Hear My Cry</i></strong> by Mildred D. Taylor</a></li>
+                                        <li><a href="http://www.amazon.com/Assata-An-Autobiography-Shakur/dp/1556520743" target="_blank"><strong><i>Assata</i></strong> by Assata Shakur</a></li>
+                                    </ul>
+                                    <h4>Films & Plays</h4>
+                                    <ul>
+                                        <li><a href="http://en.wikipedia.org/wiki/Cooley_High" target="_blank"><strong><i>Cooley High</i></strong>Directed by Michael Schultz, produced by Steve Krantz, written by Eric Monte</a></li>
+                                        <li><a href="http://en.wikipedia.org/wiki/No_Place_to_be_Somebody" target="_blank"><strong><i>No Place to be Somebody</i></strong> by Charles Gordone</a></li>
+                                        <li><a href="http://www.amazon.com/Bourbon-at-Border-Acting-Edition/dp/082222075X" target="_blank"><strong><i>Bourbon at the Border</i></strong> by Pearl Cleage</a></li>
+                    
+                                </ul>
+								</p>
 							</div>
 							<div class="4u">
-								<p>Gravida dis placerat lectus ante vel nunc euismod est turpis sodales. Diam 
-								tempor dui lacinia eget ornare varius gravida. Gravida dis placerat lectus ante 
-								vel nunc euismod est turpis sodales. Diam tempor dui lacinia accumsan vivamus 
-								augue cubilia vivamus nisi eu eget ornare varius gravida euismod.  Gravida dis 
-								lorem ipsum dolor placerat magna tempus feugiat.</p>
-								<p>Lectus ante vel nunc euismod est turpis sodales. Diam tempor dui lacinia 
-								accumsan vivamus augue cubilia vivamus nisi eu eget ornare varius gravida dolore 
-								euismod lorem ipsum dolor sit amet consequat eget ornare varius gravida euismod.
-								Gravida dis lorem ipsum dolor placerat magna tempus feugiat magna tempus lorem.</p>
-								<p>Lectus ante vel nunc euismod est turpis sodales. Diam tempor dui lacinia 
-								accumsan vivamus augue cubilia.</p>
+							    <h4>Music</h4>
+							     <iframe src="https://embed.spotify.com/?uri=spotify:user:emkprize:playlist:5zSOB1nKDThsKZaeQtDXTk" width="300" height="380" frameborder="0" allowtransparency="true"></iframe>
 							</div>
-							<div class="4u">
-								<p>Placerat lectus ante vel nunc euismod est turpis sodales. Diam tempor dui 
-								lacinia eget ornare varius gravida. Gravida dis placerat lectus ante vel nunc 
-								euismod est turpis sodales. Diam tempor dui lacinia accumsan vivamus augue 
-								cubilia vivamus nisi eu eget ornare varius gravida euismod.  Gravida dis 
-								lorem ipsum dolor placerat magna tempus feugiat. Lectus ante vel nunc euismod 
-								est turpis sodales. Diam tempor dui lacinia dolore.</p>
-								<p>Accumsan vivamus augue cubilia vivamus nisi eu eget ornare varius gravida 
-								dolore euismod lorem ipsum dolor sit amet conseismod lorem ipsum dolor sit amet 
-								consequat lorem ipsum consequat feugiat sed tempus euismod feugiat veroeros.</p>
-								<footer>
-									<a href="#fourth" class="button scrolly">Ipsum ornare lorem dolor</a>
-								</footer>
-							</div>
-						</div>
+</div>
 					</div>
 				</div>
 			</section>
@@ -429,7 +435,7 @@
 					</div>
 				</header>
 				<div class="content style4 featured">
-					<iframe src="https://embed.spotify.com/?uri=spotify:user:emkprize:playlist:5zSOB1nKDThsKZaeQtDXTk" width="300" height="380" frameborder="0" allowtransparency="true"></iframe>
+				
 				</div>
 			</section>
 			
