--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
 -->
 <html>
 	<head>
-		<title>Detroit '67 by Dominique Morisseau</title>
+		<title>Detroit '67 | A play by Dominique Morisseau</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-		<meta name="description" content="" />
-		<meta name="keywords" content="" />
+		<meta name="description" content="Educational and informational website about the 2014 recipient of the Edward M. Kennedy Prize for Drama Inspired by American History - Detroit '67 by Dominique Morisseau" />
+		<meta name="keywords" content="edward kennedy prize, edward m kennedy prize, emk prize, columbia university, ambassador jean kennedy smith, drama award, playwriting award, pulitzer prize, american history, historical drama, historical play, educational website, theater, theatre, tony kushner, prize for drama, prize for playwriting,
+		dominique morisseau, detroit 67, detroit, 1967 riots, african american history, black history, civil rights, civil rights theater, motown, detroit 67 script" />
 		<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
 		<script src="js/jquery.min.js"></script>
 		<script src="js/jquery.scrolly.min.js"></script>
@@ -275,12 +276,16 @@
 						        </ul>
 						    </div>
 						    <div class="2u">
-						                                      <ul>
+						    <ul>
                                     <li><a href="#header" class="scrolly">Top of Page</a></li>
                                     <li><a href="#first" class="scrolly">About the Playwright</a></li>
                                     <li><a href="#second" class="scrolly">Explore the Play</a></li>
                                     <li><a href="#third" class="scrolly">Voices of Detroit</a></li>
                                 </ul>
+						    </div>
+						    <div class="4u">
+						        <a class="twitter-timeline" href="https://twitter.com/EMKPrize" data-widget-id="515614675476574209">Tweets by @EMKPrize</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 						    </div>
 						
 						</div>
