--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
 						<div class="row">
 						    <div class="6u">
 						        <ul>
-						            <li>The Edward M. Kennedy Prize for Drama Inspired by American History honors the late Senator’s love of theater and his profound interest in American history. It is awarded annually by Columbia University to a new play or musical that enlists theater’s power to explore the past of the United States, to participate meaningfully in the great issues of our day through public conversation, grounded in historical understanding, that is essential to the functioning of a democracy.
+						            <li>The Edward M. Kennedy Prize for Drama Inspired by American History honors the late Senator’s love of theater and his profound interest in American history. It is awarded annually through Columbia University to a new play or musical that enlists theater’s power to explore the past of the United States, to participate meaningfully in the great issues of our day through public conversation, grounded in historical understanding, that is essential to the functioning of a democracy.
 				                <a href="http://kennedyprize.columbia.edu" target="_blank">Read more about the prize.</a></li>
 				                 <li style="clear: both; display: inline; padding: 1em 2em 0 0 ; float: left;">
                                      <a href="http://kennedyprize.columbia.edu" target="_blank"><img src="images/emk_logo.png"></a>
