addign in CU logo

--- a/index.html
+++ b/index.html
@@ -284,6 +284,11 @@
                                    <a href="http://ccnmtl.columbia.edu" target="_blank"><img src="images/ccnmtl_logo.png"></a>
                                 </li>
 						        </ul>
+						        <ul>
+						        	<li style="display: inline; padding: 1em 2em 0 0 ; float: left;">
+						        		<a href="http://www.columbia.edu/" target="_blank"><img src="images/cu_logo.png"></a>
+						        	</li>
+						        </ul>
 						    </div>
 						    <div class="2u">
 						    <ul>
