--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 					  <div class="row">
 					      <div class="12u title">
 					          <h2>Production photos from the Public Lab production of <i>Detroit ’67</i></h2>
-					          <p>Directed by Kwame Kwei-Armah at <a href="http://www.publictheater.org/" target="blank">The Public Theater</a> at Astor Place Tuesday, February 26 2013 through Sunday, March 17 2013. Photo credit: Joan Marcus. </p>
+					          <p>Directed by Kwame Kwei-Armah at <a href="http://www.publictheater.org/" target="blank">The Public Theater</a> at Astor Place Tuesday, February 26, 2013 through Sunday, March 17, 2013. Photo credit: Joan Marcus. </p>
 					      </div>
 					  </div>
 					        
@@ -185,6 +185,7 @@
 			
 		<!-- Third -->
 			<section id="third" class="main">
+			    
 				<header>
 					<div class="container poem">
                     <p>Of all the many dreams I hoard<br>
@@ -205,8 +206,8 @@
 					<div class="container">
 						<div class="row">
 							<div class="12u">
-								<h2>Recommended Resources</h2>
-								<p>Dominique Morisseau was inspired and influenced by many novels, stories, poems, songs, and art. She was also influenced by reading articles from her uncle, Eddie Morisseau, and oral histories from her mother, father, uncles, and father-in-law.  </p>
+								<h2>Voices of Detroit</h2>
+								<p>Dominique Morisseau was inspired and influenced by many novels, stories, poems, songs, and works of art. She was also influenced by reading articles written by her uncle, Eddie Morisseau, and oral histories from her mother, father, uncles, and father-in-law.  </p>
 								</div>
 								</div>
   
